--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "markdown-preview-enhanced",
+  "name": "markdown-preview-enhanced-zhleonix",
   "displayName": "%displayName%",
   "version": "0.8.15",
   "description": "%description%",
+  "contentType": "application/zip",
   "categories": [
     "Other"
   ],
@@ -35,7 +36,7 @@
     "run-in-browser": "concurrently \"vscode-test-web --browserType=chromium --extensionDevelopmentPath=. $SERVE_DIR\" \"npx http-server ./crossnote -p 6789 --cors\"",
     "run-in-vscode-dev": "npx serve --cors -l 5000 --ssl-cert $HOME/certs/localhost.pem --ssl-key $HOME/certs/localhost-key.pem",
     "test": "yarn build && node ./node_modules/vscode/bin/test",
-    "vscode:prepublish": "yarn install && yarn build",
+    "vscode:prepublish": "yarn install --force && yarn build",
     "watch": "gulp copy-files && gulp clean-out && node build.js --watch"
   },
   "contributes": {
@@ -680,8 +681,9 @@
     "@types/crypto-js": "^4.1.2",
     "@types/vfile": "^3.0.2",
     "async-mutex": "^0.4.0",
-    "crossnote": "^0.9.11",
-    "crypto-js": "^4.2.0"
+    "crossnote": "file:../crossnote/",
+    "crypto-js": "^4.2.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/cheerio": "0.22.11",
@@ -691,6 +693,7 @@
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "@vscode/test-web": "^0.0.45",
+    "@vscode/vsce": "^3.2.1",
     "concurrently": "^8.2.1",
     "esbuild": "^0.19.2",
     "esbuild-plugin-polyfill-node": "^0.3.0",
@@ -710,5 +713,16 @@
   "engines": {
     "vscode": "^1.70.0"
   },
-  "icon": "media/mpe.png"
+  "icon": "media/mpe.png",
+  "files": [
+    "node_modules/@img/**/*",
+    ".github/**/*",
+    "crossnote/**/*",
+    "media/**/*",
+    "out/**/*",
+    "package.json",
+    "package.nls.json",
+    "package.nls.zh.json",
+    "LICENSE.md"
+    ]
 }
